Apply refaster